--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -2,9 +2,9 @@
 # favicon
 favicon = "images/favicon.png"
 # logo
-logo = "images/logo.png"
+logo = "images/twiinIT_logo_left_no_subtitle.svg"
 # use `x` with logo_width, example: "100x"
-logo_width = "180x"
+logo_width = "150x"
 # logo text will only show when logo is missing.
 logo_text = "Andromeda"
 # OpenGraph / Twitter Card metadata
