Refactor content of homepage

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -52,7 +52,9 @@ preloader = "images/favicon.png" # use jpg, png, svg or gif format.
 
 # Navigation button
 [navigation_button]
-enable = false
+enable = true
+label = "Try our tools!"
+link = "https://lab.twiinit.com/"
 
 # cookies
 [cookies]
