--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -10,9 +10,14 @@ url = "#team"
 weight = 3
 
 [[main]]
+name = "Partners"
+url = "#partners"
+weight = 4
+
+[[main]]
 name = "Contact"
 url = "#contact"
-weight = 4
+weight = 5
 
 [[main]]
 name = "Blog"
