--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -1,8 +1,8 @@
 # main menu
-[[main]]
-name = "Services"
-url = "#services"
-weight = 2
+#[[main]]
+#name = "Services"
+#url = "#services"
+#weight = 2
 
 [[main]]
 name = "Team"
