--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -32,7 +32,7 @@ reading_time = true
 
 [variables]
 black = "#3E3E3E"
-primary_color = "#E67E30"
+primary_color = "#F2BF42"
 
 # contact information
 #[contact_info]
