fix: preview comment

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -2,12 +2,12 @@ name: Deploy Hugo PR Preview
 
 on:
   pull_request:
-    branches:
-      - master
+    types: [opened, synchronize, reopened]
 
 jobs:
   preview:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
         with:
@@ -30,3 +30,13 @@ jobs:
           publish_dir: ./public
           publish_branch: gh-pages
           destination_dir: preview/pr-${{ github.event.number }}
+
+      - name: Comment PR with preview URL
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: ${{ github.event.number }}
+          body: |
+            🚀 **Preview deployed!**
+
+            🔗 [View the preview](https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/preview/pr-${{ github.event.number }}/)
